--- a/SimpleList/SimpleList.csproj
+++ b/SimpleList/SimpleList.csproj
@@ -39,6 +39,7 @@
       <DependentUpon>SimpleListPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Speaker.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
